--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "herd game test",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
     "start": "webpack --watch"
   },
   "author": "fmdm",
